tests/features/simple-fail.ll
; RUN: %not %parcoach %s -disable-output 2>&1 | %filecheck %s
; CHECK: error: expected top-level entity
almost empty file
